--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "synapsehub",
+  "homepage": "https://devravindu.github.io/synapsehub/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,8 +17,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -35,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
+  
 }
